No longer default events to Usage.PRODUCTION
Usage will be part of the subscription_labels metric labels so
we will pull the value from there and default to null if it isn't
found.

NOTE: As part of this fix, we are following the same pattern for
      other event properties that are set from labels.